Stylesheet/emote/tag updates 2013-12-10

--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -272,15 +272,6 @@ a[href|="/dabrushie"] {
     background-image:url(%%dabrushie%%)
 }
 
-a[href|="/crystalcolgate"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 170px;
-    height: 170px;
-    background-image:url(%%crystalcolgate%%)
-}
-
 
 a[href|="/colno"] {
     display: block;
@@ -339,15 +330,6 @@ a[href|="/sockybrushie"] {
     width: 175px;
     height: 159px;
     background-image:url(%%sockybrushie%%)
-}
-
-a[href|="/whynotcolgate"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 190px;
-    height: 195px;
-    background-image:url(%%whynotcolgate%%)
 }
 
 a[href|="/colgatederp"] {
@@ -1404,6 +1386,144 @@ a[href|="/twixiepillow"] {
  height: 152px;
  background-image: url(%%spritesheet9%%);
  background-position: -0px -2726px;
+}
+
+a[href|="/pinkaistiredofyourshit"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 210px;
+ height: 220px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -0px;
+}
+
+
+a[href|="/pinkawhatever"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 223px;
+ height: 114px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -219px;
+}
+
+
+a[href|="/whatdoyouwant"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 192px;
+ height: 166px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -339px;
+}
+
+
+a[href|="/pinkasulk"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 234px;
+ height: 189px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -505px;
+}
+
+
+a[href|="/pinkareally"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 188px;
+ height: 174px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -694px;
+}
+
+
+a[href|="/pinkahopeless"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 307px;
+ height: 92px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -868px;
+}
+
+
+a[href|="/pinkagrowl"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 168px;
+ height: 147px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -965px;
+}
+
+
+a[href|="/pinkacry"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 191px;
+ height: 154px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -1113px;
+}
+
+
+a[href|="/leavemealone"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 200px;
+ height: 156px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -1270px;
+}
+
+a[href|="/idontneedanyone"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 159px;
+ height: 212px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -1428px;
+}
+
+a[href|="/pinkahappytear"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 156px;
+ height: 197px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -1645px;
+}
+
+a[href|="/crazyhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 233px;
+ height: 147px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -1843px;
+}
+
+a[href|="/atleastsomeonelikesme"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 175px;
+ height: 191px;
+ background-image: url(%%braespritesheet%%);
+ background-position: -0px -1990px;
 }
 
 div.titlebox span.word {display:none; }
