--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1195,7 +1195,9 @@ a[href|="/literallybrohoof"],
 a[href|="/abhowyoudoin"],
 a[href|="/pootishorn"],
 a[href|="/lyramaster"],
-a[href|="/unprofessionalbehavior"]
+a[href|="/unprofessionalbehavior"],
+a[href|="/miggylick"],
+a[href|="/miggyblick"]
 {
     display: block;
     clear: none;
@@ -1319,6 +1321,12 @@ a[href|="/unprofessionalbehavior"]
 {
 	width: 174px;
 	background-position: -0px -980px;
+}
+a[href|="/miggylick"],
+a[href|="/miggyblick"]
+{
+	width: 263px;
+	background-position: -174px -980px;
 }
 /* end sheet 8 */
 
@@ -1728,7 +1736,7 @@ a[href|="/endlessbreadsticks"]
 
 
 /* sheet 12 */
-a[href|="/flutterchrysalisscared"],
+a[href|="/flufflechrysalisscared"],
 a[href|="/flutteralltheanimals"],
 a[href|="/killme"],
 a[href|="/bpwhatdididrinklastnight"],
@@ -1752,7 +1760,7 @@ a[href|="/woonalove"]
     height: 140px;
     background-image: url(%%sheet12%%)
 }
-a[href|="/flutterchrysalisscared"]
+a[href|="/flufflechrysalisscared"]
 {
 	width: 155px;
 	background-position: -0px -0px;
