--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -3,7 +3,7 @@
 To move it from the side to the middle change Background-position: bottom right; to Background-position: center center;*/
 
 body {
-   background-image: url(%%PnmKm6w%%);
+   background-image: url(%%kok%%);
    background-repeat: no-repeat;
    background-position: Center Center;
    background-attachment:fixed;
@@ -856,7 +856,7 @@ a[href|="/twistudy"] {
     }
 
 
-a[href|="/twisad"] { 
+a[href|="/twibreak"] { 
     display: block; 
     clear: none; 
     float: left; 
@@ -864,7 +864,7 @@ a[href|="/twisad"] {
     height: 100px; 
     background-image: url(%%twisad%%) 
     } 
-a[href|="/twisad"] { 
+a[href|="/twibreak"] { 
     background-position: -0px -0px 
     }
 
