--- a/source-css/mylittlewtf.css
+++ b/source-css/mylittlewtf.css
@@ -1602,7 +1602,7 @@ a[href|='/twisalute'] {
     background-position: -176px -2px
     }
 /* Emotes from FimFiction + others */
-a[href|='/ff00'], a[href|='/ff01'], a[href|='/ff02'], a[href|='/ff04'], a[href|='/ff05'], a[href|='/ff10'], a[href|='/ff11'], a[href|='/ff12'], a[href|='/ff13'], a[href|='/ff14'], a[href|='/ff15'], a[href|='/ff20'], a[href|='/ff21'], a[href|='/ff22'], a[href|='/ff23'], a[href|='/ff24'], a[href|='/ff25'], a[href|='/ff30'], a[href|='/ff31'], a[href|='/ff32'], a[href|='/ff33'], a[href|='/ff34'], a[href|='/ff35'], a[href|='/ff40'], a[href|='/ff41'], a[href|='/ff42'], a[href|='/ff43'], a[href|='/ff44'], a[href|='/ff45'], a[href|='/ff50'], a[href|='/ff51'], a[href|='/ff52'], a[href|='/ff53'], a[href|='/ff54'], a[href|='/ff55'], a[href|='/ff60'], a[href|='/ff61'], a[href|='/ff62'], a[href|='/ff63'], a[href|='/ff64'], a[href|='/ff65'], a[href|='/ff70'], a[href|='/ff71'], a[href|='/ff72'], a[href|='/ff73'], a[href|='/ff74'], a[href|='/ff75'], a[href|='/ajbemused'], a[href|='/ajsleepy'], a[href|='/fimajsmug'], a[href|='/applejackconfused'], a[href|='/applejackunsure'], a[href|='/coolphoto'], a[href|='/derpyderp1'], a[href|='/derpyderp2'], a[href|='/derpytongue2'], a[href|='/fimduck'], a[href|='/fimeeyup'], a[href|='/fimfacehoof'], a[href|='/fluttercry'], a[href|='/flutterrage'], a[href|='/fluttershbad'], a[href|='/fluttershyouch'], a[href|='/fluttershysad'], a[href|='/heart'], a[href|='/moustache'], a[href|='/pinkiecrazy'], a[href|='/pinkiegasp'], a[href|='/pinkiehappy'], a[href|='/pinkiesad2'], a[href|='/pinkiesick'], a[href|='/pinkiesmile'], a[href|='/rainbowderp'], a[href|='/rainbowdetermined2'], a[href|='/rainbowhuh'], a[href|='/rainbowkiss'], a[href|='/rainbowlaugh'], a[href|='/rainbowwild'], a[href|='/raritycry'], a[href|='/raritydespair'], a[href|='/raritystarry'], a[href|='/raritywink'], a[href|='/scootangel'], a[href|='/trixieshiftleft'], a[href|='/trixieshiftright'], a[href|='/trollestia'], a[href|='/twilightangry2'], a[href|='/twilightblush'], a[href|='/twilightoops'], a[href|='/twilightsheepish'], a[href|='/twilightsmile'], a[href|='/twistnerd'], a[href|='/unsuresweetie'], a[href|='/fimyay'] {
+a[href|='/ff00'], a[href|='/ff01'], a[href|='/ff02'], a[href|='/ff04'], a[href|='/ff05'], a[href|='/ff10'], a[href|='/ff11'], a[href|='/ff12'], a[href|='/ff13'], a[href|='/ff14'], a[href|='/ff15'], a[href|='/ff20'], a[href|='/ff21'], a[href|='/ff22'], a[href|='/ff23'], a[href|='/ff24'], a[href|='/ff25'], a[href|='/ff30'], a[href|='/ff31'], a[href|='/ff32'], a[href|='/ff33'], a[href|='/ff34'], a[href|='/ff35'], a[href|='/ff40'], a[href|='/ff41'], a[href|='/ff42'], a[href|='/ff43'], a[href|='/ff44'], a[href|='/ff45'], a[href|='/ff50'], a[href|='/ff51'], a[href|='/ff52'], a[href|='/ff53'], a[href|='/ff54'], a[href|='/ff55'], a[href|='/ff60'], a[href|='/ff61'], a[href|='/ff62'], a[href|='/ff63'], a[href|='/ff64'], a[href|='/ff65'], a[href|='/ff70'], a[href|='/ff71'], a[href|='/ff72'], a[href|='/ff73'], a[href|='/ff74'], a[href|='/ff75'], a[href|='/heart'] {
     display: block;
     clear: none;
     float: left;
@@ -1616,150 +1616,150 @@ a[href|='/wmesplin'], a[href|='/crash'], a[href|='/ff03'], a[href|='/applecry'],
     float: left;
     background-image: url(%%fimmotes%%)
     }
-a[href|='/ff00'], a[href|='/ajbemused'] {
+a[href|='/ff00'] {
     background-position: -1px -1px
     }
-a[href|='/ff01'], a[href|='/ajsleepy'] {
+a[href|='/ff01'] {
     background-position: -29px -1px
     }
-a[href|='/ff02'], a[href|='/fimajsmug'] {
+a[href|='/ff02'] {
     background-position: -57px -1px
     }
-a[href|='/ff03'], a[href|='/applecry'] {
+a[href|='/ff03'] {
     width: 34px;
     height: 27px !important;
     background-position: -85px -1px
     }
-a[href|='/ff04'], a[href|='/applejackconfused'] {
+a[href|='/ff04']{
     background-position: -120px -1px
     }
-a[href|='/ff05'], a[href|='/applejackunsure'] {
+a[href|='/ff05']{
     background-position: -148px -1px
     }
-a[href|='/ff10'], a[href|='/coolphoto'] {
+a[href|='/ff10'] {
     background-position: -176px -1px
     }
-a[href|='/ff11'], a[href|='/derpyderp1'] {
+a[href|='/ff11'] {
     background-position: -204px -1px
     }
-a[href|='/ff12'], a[href|='/derpyderp2'] {
+a[href|='/ff12'] {
     background-position: -1px -29px
     }
-a[href|='/ff13'], a[href|='/derpytongue2'] {
+a[href|='/ff13'] {
     background-position: -29px -29px
     }
-a[href|='/ff14'], a[href|='/fimduck'] {
+a[href|='/ff14'] {
     background-position: -57px -29px
     }
-a[href|='/ff15'], a[href|='/fimeeyup'] {
+a[href|='/ff15'] {
     background-position: -85px -29px
     }
-a[href|='/ff20'], a[href|='/fimfacehoof'] {
+a[href|='/ff20'] {
     background-position: -113px -29px
     }
-a[href|='/ff21'], a[href|='/fluttercry'] {
+a[href|='/ff21'] {
     background-position: -141px -29px
     }
-a[href|='/ff22'], a[href|='/flutterrage'] {
+a[href|='/ff22']{
     background-position: -169px -29px
     }
-a[href|='/ff23'], a[href|='/fluttershbad'] {
+a[href|='/ff23'] {
     background-position: -197px -29px
     }
-a[href|='/ff24'], a[href|='/fluttershyouch'] {
+a[href|='/ff24'] {
     background-position: -225px -29px
     }
-a[href|='/ff25'], a[href|='/fluttershysad'] {
+a[href|='/ff25'] {
     background-position: -1px -57px
     }
 a[href|='/ff30'], a[href|='/heart'] {
     background-position: -29px -57px
     }
-a[href|='/ff31'], a[href|='/moustache'] {
+a[href|='/ff31'] {
     background-position: -57px -57px
     }
-a[href|='/ff32'], a[href|='/pinkiecrazy'] {
+a[href|='/ff32'] {
     background-position: -85px -57px
     }
-a[href|='/ff33'], a[href|='/pinkiegasp'] {
+a[href|='/ff33'] {
     background-position: -113px -57px
     }
-a[href|='/ff34'], a[href|='/pinkiehappy'] {
+a[href|='/ff34'] {
     background-position: -141px -57px
     }
-a[href|='/ff35'], a[href|='/pinkiesad2'] {
+a[href|='/ff35'] {
     background-position: -169px -57px
     }
-a[href|='/ff40'], a[href|='/pinkiesick'] {
+a[href|='/ff40'] {
     background-position: -197px -57px
     }
-a[href|='/ff41'], a[href|='/pinkiesmile'] {
+a[href|='/ff41'] {
     background-position: -225px -57px
     }
-a[href|='/ff42'], a[href|='/rainbowderp'] {
+a[href|='/ff42'] {
     background-position: -1px -85px
     }
-a[href|='/ff43'], a[href|='/rainbowdetermined2'] {
+a[href|='/ff43'] {
     background-position: -29px -85px
     }
-a[href|='/ff44'], a[href|='/rainbowhuh'] {
+a[href|='/ff44'] {
     background-position: -57px -85px
     }
-a[href|='/ff45'], a[href|='/rainbowkiss'] {
+a[href|='/ff45']{
     background-position: -85px -85px
     }
-a[href|='/ff50'], a[href|='/rainbowlaugh'] {
+a[href|='/ff50'] {
     background-position: -113px -85px
     }
-a[href|='/ff51'], a[href|='/rainbowwild'] {
+a[href|='/ff51'] {
     background-position: -141px -85px
     }
-a[href|='/ff52'], a[href|='/raritycry'] {
+a[href|='/ff52'] {
     background-position: -169px -85px
     }
-a[href|='/ff53'], a[href|='/raritydespair'] {
+a[href|='/ff53'] {
     background-position: -197px -85px
     }
-a[href|='/ff54'], a[href|='/raritystarry'] {
+a[href|='/ff54'] {
     background-position: -225px -85px
     }
-a[href|='/ff55'], a[href|='/raritywink'] {
+a[href|='/ff55'] {
     background-position: -1px -113px
     }
-a[href|='/ff60'], a[href|='/scootangel'] {
+a[href|='/ff60'] {
     background-position: -29px -113px
     }
-a[href|='/ff61'], a[href|='/trixieshiftleft'] {
+a[href|='/ff61']{
     background-position: -57px -113px
     }
-a[href|='/ff62'], a[href|='/trixieshiftright'] {
+a[href|='/ff62'] {
     background-position: -85px -113px
     }
-a[href|='/ff63'], a[href|='/trollestia'] {
+a[href|='/ff63'] {
     background-position: -113px -113px
     }
-a[href|='/ff64'], a[href|='/twilightangry2'] {
+a[href|='/ff64'] {
     background-position: -141px -113px
     }
-a[href|='/ff65'], a[href|='/twilightblush'] {
+a[href|='/ff65']{
     background-position: -169px -113px
     }
-a[href|='/ff70'], a[href|='/twilightoops'] {
+a[href|='/ff70'] {
     background-position: -197px -113px
     }
-a[href|='/ff71'], a[href|='/twilightsheepish'] {
+a[href|='/ff71'] {
     background-position: -225px -113px
     }
-a[href|='/ff72'], a[href|='/twilightsmile'] {
+a[href|='/ff72']{
     background-position: -1px -141px
     }
-a[href|='/ff73'], a[href|='/twistnerd'] {
+a[href|='/ff73'] {
     background-position: -29px -141px
     }
-a[href|='/ff74'], a[href|='/unsuresweetie'] {
+a[href|='/ff74'] {
     background-position: -57px -141px
     }
-a[href|='/ff75'], a[href|='/fimyay'] {
+a[href|='/ff75'] {
     background-position: -85px -141px
     }
 a[href|='/crash'] {
