--- a/source-css/speedingturtle.css
+++ b/source-css/speedingturtle.css
@@ -414,3 +414,11 @@ display: block;
 background-image: url(%%twisleep%%);
 float: left
 }
+
+a[href|="/themoreyoutwi"]{
+width:320px;
+height:207px;
+display: block;
+background-image: url(%%themoreyouknow%%);
+float: left
+}
