--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -647,15 +647,6 @@ a[href|="/chibitavicello"] {
  background-image: url(%%chibitavicello%%);
 } 
 
-a[href|="/octascratchhug"] {  
- display: block;
- clear: none;
- float: left; 
- width: 219px;
- height: 150px;
- background-image: url(%%octascratchhug%%);
-} 
-
 a[href|="/tavivinylbathtime"] {  
  display: block;
  clear: none;
@@ -1325,15 +1316,6 @@ a[href|="/tavitea"] {
  background-position: -0px -900px;  
 } 
 
-a[href|="/octadashhug"] {  
- display: block;
- clear: none;
- float: left; 
- width: 220px;
- height: 150px;
- background-image: url(%%octadashhug%%); 
-} 
-
 a[href|="/tavifoot"] {  
  display: block;
  clear: none;
@@ -1971,3 +1953,64 @@ a[href|="/luneon"] {
  background-image: url(%%spritesheet13%%);
  background-position: -0px -1850px;  
 } 
+
+a[href|="/octascratchhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/octadashhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/octarosehug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/octararityhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/octashyhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/octatwihug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%spritesheet14%%);
+ background-position: -0px -1050px;  
+} 
+ 
