--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -1,9 +1,3 @@
-.midcol
-{ 
-width:0px;
-height:0px;
-}
-
 a[href|="/ccpose"] {
 float:left;
 width:140px;
@@ -294,4 +288,20 @@ width:200px;
 height:150px;
 background-repeat:no-repeat;
 background-image:url(%%clarity%%);
+}
+
+a[href|="/ccshy"] {
+    float:left;
+    width:148px;
+    height:160px;
+    background-repeat:no-repeat;
+    background-image:url(%%ccshy%%);
+}
+
+a[href|="/ccmad"] {
+    float:left;
+    width:158px;
+    height:140px;
+    background-repeat:no-repeat;
+    background-image:url(%%ccmad%%);
 }
