--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -430,13 +430,13 @@ a[href|="/lpstretch"]{ background-position: -200px -980px; width: 171px; height:
 a[href|="/lpdisgust"]{ background-position: -200px -1180px; width: 146px; height: 150px; }
 a[href|="/lpheroic"]{ background-position: -200px -1380px; width: 123px; height: 150px; }
 
-a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"], a[href|="/bjdisgust"], a[href|="/gloryfun"], a[href|="/velvetbedroomeyes"]
+a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"], a[href|="/bjdisgust"], a[href|="/gloryfun"], a[href|="/velvetbedroomeyes"], a[href|="/stablebuck"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em7-v09%%);
+background-image: url(%%foe-em7-v10%%);
 }
 a[href|="/lpdowncast"]{ background-position: -0px -0px; width: 172px; height: 150px; }
 a[href|="/steelhoovesrear"]{ background-position: 0 -200px; width: 120px; height: 175px; }
@@ -449,6 +449,7 @@ a[href|="/velvetshrug"]{ background-position: 0 -1085px; width: 71px; height: 70
 a[href|="/bjdisgust"]{ background-position: 0 -1205px; width: 105px; height: 150px; }
 a[href|="/gloryfun"]{ background-position: 0 -1405px; width: 244px; height: 130px; }
 a[href|="/velvetbedroomeyes"]{ background-position: 0 -1585px; width: 112px; height: 150px; }
+a[href|="/stablebuck"]{ background-position: 0 -1785px; width: 106px; height: 150px; }
 
 a[href|="/advicebj"]
 {
