--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -65,13 +65,13 @@ body:first-of-type, body.res-nightmode:first-of-type {
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%SecretSanta1%%) 50% 0px !important;
+   background: url(%%christmasbanner%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
 
 
-.side a[href="http://redd.it/1rmel8"]
+.side a[href="https://webchat.mlas1.org/?nick=Gummy...&channels=mlas1&prompt=1"]
 {
    display:block;
    width: 512px;
@@ -837,7 +837,6 @@ a.author[href$="V17Ds"]:before {content:"Plounger"}
 a.author[href$="Rudicorn"]:before {content:"Grumpledick"}
 a.author[href$="jimmpony"]:before {content:"sirtophat"}
 a.author[href$="DiscordDraconequus"]:before {content:"The Real Chrysalis"}
-a.author[href$="IncidentalUnicorn2"]:before {content:"theclinger"}
 a.author[href$="Juz16"]:before {content:"Jizz"}
 a.author[href$="EvanMacIan"]:before {content:"Ewan McGregor"}
 a.author[href$="kcirvam"]:before {content:"mavrick45"}
@@ -912,7 +911,7 @@ a.author[href$=LlamaInDrag]:before { content:"A REAL FUCKING DINOSAUR" }
 a.author[href$=Nagashizuri]:before { content:"Maga" }
 a.author[href$=andresonic1]:before { content:"Fake" }
 a.author[href$=Bflat13]:before { content:"BECAUSE OF THE MOTHER FUCKING SUGAR!" }
-a.author[href$=theclinger_4]:before { content:"The Cringler" }
+a.author[href$=IncidentalUnicorn2]:before { content:"The Cringler" }
 a.author[href$=FUCKING_HATE_REDDIT]:before { content:"Freakin' Dislike Webplace" }
 a.author[href$=andysonic3]:before { content:"Chibi Andy" }
 a.author[href$=andysonic0]:before { content:"Mini Andy" }
@@ -997,7 +996,7 @@ a.author[href$=herabek]:after,
 a.author[href$=Backupusername]:after,
 a.author[href$= Nagashizuri]:after,
 a.author[href$="Conky_"]:after,
-a.author[href$="theclinger_4"]:after,
+a.author[href$="IncidentalUnicorn2"]:after,
 a.author[href$="andysonic3"]:after,
 a.author[href$="andysonic0"]:after,
 a.author[href$="Andysonic-1"]:after
@@ -1070,7 +1069,7 @@ a.author[href$="10z20Luka"]:after { content:" (Wears a flaming kilt made from th
 a.author[href$=JIVEprinting]:after { content:" Christfag" }
 a.author[href$="Conky_"]:after { content:" In a Lot of Trouble, Mr." }
 a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
-a.author[href$="theclinger_4"]:after { content:" is tired of your bullshit" }
+a.author[href$="IncidentalUnicorn2"]:after { content:" Making no fun, fun!" }
 a.author[href$="andysonic3"]:after { content:" THE NO FUN DEPUTY" }
 a.author[href$="andysonic0"]:after { content:" THE NO FUN CHIEF" }
 a.author[href$="Andysonic-1"]:after { content:" THE NO FUN ROOKIE" }
