--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -1380,10 +1380,10 @@ Height: 100px;
 
 /* Other Emotes */
 
-a[href|="/flutterface"], a[href|="/thatirishfella"], a[href|="/rocketmac"]
+a[href|="/flutterhorror"], a[href|="/thatirishfella"], a[href|="/rocketmac"]
 {display:block;clear:none;float:left;background-image:url(%%Other%%)}
 
-a[href="/flutterface"] {
+a[href="/flutterhorror"] {
 background-position: -0px -0px;
 Width: 150px;
 Height: 150px;
