Stylesheet/emote/tag updates 2013-12-14

--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1955,7 +1955,9 @@ a[href|="/princesscelery"],
 a[href|="/mspluna"],
 a[href|="/mspsweetie"],
 a[href|="/mspscootaloo"],
-a[href|="/mspapplebloom"]
+a[href|="/mspapplebloom"],
+a[href|="/yuubutts"],
+a[href|="/teiyourenaked"]
 {
     display: block;
     clear: none;
@@ -2024,5 +2026,17 @@ a[href|="/mspapplebloom"]
 {
 	width: 81px;
 	background-position: -184px -280px;
+}
+a[href|="/yuubutts"]
+{
+	width: 382px;
+	height: 200px;
+	background-position: -0px -420px;
+}
+a[href|="/teiyourenaked"]
+{
+	width: 191px;
+	height: 200px;
+	background-position: -383px -420px;
 }
 /* end wollop sheet */
