--- a/source-css/mylittlewtf.css
+++ b/source-css/mylittlewtf.css
@@ -1610,7 +1610,7 @@ a[href|='/ff00'], a[href|='/ff01'], a[href|='/ff02'], a[href|='/ff04'], a[href|=
     height: 27px;
     background-image: url(%%fimmotes%%)
     }
-a[href|='/wmesplin'], a[href|='/crash'], a[href|='/ff03'], a[href|='/applecry'], a[href|='/flutterthink'], a[href|='/sbf'], a[href|='/rsbf'] {
+a[href|='/wmesplin'], a[href|='/crash'], a[href|='/ff03'], a[href|='/flutterthink'], a[href|='/sbf'], a[href|='/rsbf'] {
     display: block;
     clear: none;
     float: left;
