--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -2,10 +2,10 @@ div.titlebox span.word {
     display: none;
     }
 div.titlebox .subscribers span.number:after {
-    content: " Fillies"
+    content: " Griffons"
     }
 div.titlebox .users-online span.number:after {
-    content: " Trick or Treating"
+    content: " Preening"
     }
 
 a.author[href$="PinkiePieladin"]:after{content:" - User of the Month Sept. 2013"}
