--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -318,11 +318,11 @@ vertical-align: middle;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
-a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"]
+a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/feelsgoodtwilight"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -338,7 +338,7 @@ a[href|="/karmashark"], a[href|="/jumptheshark"]
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
 /* 300x300a 'motes */
-a[href|="/pinkieplease"], a[href|="/twispike"]
+a[href|="/pinkieplease"], a[href|="/twispike"], a[href|="/sparklelove"]
 {background-image:url(%%300x300a%%);width:300px;height:300px;display:block;float:left;}
 
 /* Misfits a */
@@ -347,7 +347,7 @@ a[href|="/twismirk"], a[href|="/huglife"], a[href|="/happyderp"], a[href|="/spea
 {background-image:url(%%misfitsa%%);display:block;float:left;}
 
 /* Misfits b */
-a[href|="/braecozy"], a[href|="/caramelsad"], a[href|="/twilicry"], a[href|="/sfpride"], a[href|="/sfmotherofgod"], a[href|="/sbdisgusting"], a[href|="/absolutelydisgusting"], a[href|="/ppwhywouldyoudothat"], a[href|="/fluttersnoo"], a[href|="/twilicute"], a[href|="/superlazy"], a[href|="/dashcuteblanket"]
+a[href|="/braecozy"], a[href|="/caramelsad"], a[href|="/twilicry"], a[href|="/sfpride"], a[href|="/sfmotherofgod"], a[href|="/sbdisgusting"], a[href|="/absolutelydisgusting"], a[href|="/ppwhywouldyoudothat"], a[href|="/fluttersnoo"], a[href|="/twilicute"], a[href|="/superlazy"], a[href|="/dashcuteblanket"], a[href|="/paperwork"], a[href|="/objection"]
 {background-image:url(%%misfitsb%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -359,7 +359,7 @@ a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/a
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -375,7 +375,7 @@ a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/feelsgoodtwilight"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -443,3 +443,5 @@ a[href|="/ppwhywouldyoudothat"] {width:295px;height:176px;background-position: -
 a[href|="/fluttersnoo"] {width:114px;height:150px;background-position: 0 -367px;}
 a[href|="/twilicute"] {width:200px;height:150px;background-position: -114px -413px;}
 a[href|="/superlazy"], a[href|="/dashcuteblanket"] {width:200px;height:93px;background-position: -296px -100px;}
+a[href|="/paperwork"] {width:250px;height:213px;background-position: 0 -563px;}
+a[href|="/objection"] {width:225px;height:120px;background-position: -250px -563px;}
