--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -1110,7 +1110,7 @@ a.author[href$="bryvood"]:before {content:"DJ Toaster Scratchaloo"}
 a.author[href$="otwem"]:before {content:"Otwem Scratch"}
 a.author[href$="Kireas"]:before {content:"Octavia"}
 a.author[href$="AlisterDX"]:before {content:"Homage"}
-a.author[href$="upvote_machine_1"]:before {content:"Homage"}
+a.author[href$="upvote_machine_1"]:before {content:"BANNED"}
 a.author[href$="Harakou"]:before {content:"Taco OIA"}
 a.author[href$="nightpony"]:before {content:"DJ NightPon3"}
 a.author[href$="007ghg7"]:before {content:"fukn"}
@@ -1126,7 +1126,6 @@ a.author[href$="JadeMeteor"]:before {content:"Octavia"}
 .author[href$="Harakou"] { color:brown !important }
 .author[href$="nightpony"] { color:#a100a1 !important }
 .author[href$="JadeMeteor"] { color:purple !important }
-.author[href$="upvote_machine_1"] { color:blue !important }
 
 a.author[href$="/mrjoker7854"] {
     display: inline-block;
