--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -430,13 +430,13 @@ a[href|="/lpstretch"]{ background-position: -200px -980px; width: 171px; height:
 a[href|="/lpdisgust"]{ background-position: -200px -1180px; width: 146px; height: 150px; }
 a[href|="/lpheroic"]{ background-position: -200px -1380px; width: 123px; height: 150px; }
 
-a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"], a[href|="/bjdisgust"], a[href|="/gloryfun"], a[href|="/velvetbedroomeyes"], a[href|="/stablebuck"]
+a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"], a[href|="/bjdisgust"], a[href|="/gloryfun"], a[href|="/velvetbedroomeyes"], a[href|="/stablebuck"], a[href|="/bjwhy"], a[href|="/lpsmirk"], a[href|="/velvetsmirk"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em7-v10%%);
+background-image: url(%%foe-em7-v12%%);
 }
 a[href|="/lpdowncast"]{ background-position: -0px -0px; width: 172px; height: 150px; }
 a[href|="/steelhoovesrear"]{ background-position: 0 -200px; width: 120px; height: 175px; }
@@ -450,6 +450,9 @@ a[href|="/bjdisgust"]{ background-position: 0 -1205px; width: 105px; height: 150
 a[href|="/gloryfun"]{ background-position: 0 -1405px; width: 244px; height: 130px; }
 a[href|="/velvetbedroomeyes"]{ background-position: 0 -1585px; width: 112px; height: 150px; }
 a[href|="/stablebuck"]{ background-position: 0 -1785px; width: 106px; height: 150px; }
+a[href|="/bjwhy"]{ background-position: -294px 0; width: 91px; height: 150px; }
+a[href|="/lpsmirk"]{ background-position: -294px -200px; width: 76px; height: 100px; }
+a[href|="/velvetsmirk"]{ background-position: -294px -350px; width: 95px; height: 100px; }
 
 a[href|="/advicebj"]
 {
@@ -570,6 +573,17 @@ background-image: url(%%lpseductive%%);
 }
 a[href|='/lpseductive'] {background-position: 0px 0px}
 
+
+a[href|="/murkylook"]
+{
+display: block;
+clear: none;
+float: left;
+width: 205px;
+height: 150px;
+background-repeat: no-repeat;
+background-image: url(%%murky-eyes-v1%%);
+}
 
 /* Flair */
 
