--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -440,7 +440,7 @@ a.author[href$="MotharChoddar"]:after { content: " Finnish drunk "}
 a.author[href$="LunarWolves"]:after { content: " Heretical Leader "}
 a.author[href$="ctare"]:after {content: " Among other things "}
 a.author[href$="HatzHeartsIcecream"]:after {content: " ❤ "}
-a.author[href$="Dwarflord"]:after {content: " ClopFic ETA:____ "}
+a.author[href$="Dwarflord"]:after {content: " Super Star Clopfic Writer "}
 a.author[href$="moonomnom"]:after {content: " Dayum shame"}
 a.author[href$="Broken_Wagonwheel"]:after {content: " Sang's Slave "}
 a.author[href$="Dundrioundio"]:after {content: " Never cuddle "}
@@ -615,6 +615,16 @@ a[href|="/rosesax"] {
     height: 150px;
     background-image: url(%%rosesax%%) !important
     }
+
+a[href|="/dashsmirk"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 137px;
+    height: 150px;
+    background-image: url(%%dashsmirk%%) !important
+    }
+
 
 a[href|="/roseew"] {
     display: block;
